test/code/test_class_interface_extends_error2.php
<?php

class A {}
interface B extends A {}

